--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -88,8 +88,9 @@
     "! wget http://files.grouplens.org/datasets/movielens/ml-1m.zip -O ./ml-1m.zip \n",
     "! wget https://raw.githubusercontent.com/shenweichen/DeepMatch/master/examples/preprocess.py -O preprocess.py\n",
     "! unzip -o ml-1m.zip \n",
+    "%tensorflow_version 1.x\n",
     "! pip uninstall -y -q tensorflow\n",
-    "! pip install -q tensorflow-gpu==2.1.0\n",
+    "! pip install -q tensorflow-gpu==1.14.0\n",
     "! pip install -q deepmatch"
    ]
   },
