--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -381,13 +381,17 @@
     "\n",
     "K.set_learning_phase(True)\n",
     "\n",
-    "model = YoutubeDNN(user_feature_columns, item_feature_columns, num_sampled=200, user_dnn_hidden_units=(128,64, embedding_dim))\n",
-    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=True,p=1,k_max=2,num_sampled=5,user_dnn_hidden_units=(64,16),init_std=0.001)\n",
+    "import tensorflow as tf\n",
+    "if tf.__version__ >= '2.0.0':\n",
+    "    tf.compat.v1.disable_eager_execution()\n",
+    "\n",
+    "model = YoutubeDNN(user_feature_columns, item_feature_columns, num_sampled=100, user_dnn_hidden_units=(128,64, embedding_dim))\n",
+    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=False,p=1,k_max=2,num_sampled=100,user_dnn_hidden_units=(128,64, embedding_dim),init_std=0.001)\n",
     "\n",
     "model.compile(optimizer=\"adam\", loss=sampledsoftmaxloss)  # \"binary_crossentropy\")\n",
     "\n",
     "history = model.fit(train_model_input, train_label,  # train_label,\n",
-    "                    batch_size=512, epochs=24, verbose=1, validation_split=0.0, )\n",
+    "                    batch_size=512, epochs=20, verbose=1, validation_split=0.0, )\n",
     "\n",
     "# 4. Generate user features for testing and full item features for retrieval\n",
     "test_user_model_input = test_model_input\n",
@@ -397,7 +401,7 @@
     "item_embedding_model = Model(inputs=model.item_input, outputs=model.item_embedding)\n",
     "\n",
     "user_embs = user_embedding_model.predict(test_user_model_input, batch_size=2 ** 12)\n",
-    "# user_embs = user_embs[:, i, :]  i in [0,k_max) if MIND\n",
+    "# user_embs = user_embs[:, i, :]  # i in [0,k_max) if MIND\n",
     "item_embs = item_embedding_model.predict(all_item_model_input, batch_size=2 ** 12)\n",
     "\n",
     "print(user_embs.shape)\n",
@@ -500,7 +504,7 @@
     "# faiss.normalize_L2(item_embs)\n",
     "index.add(item_embs)\n",
     "# faiss.normalize_L2(user_embs)\n",
-    "D, I = index.search(user_embs, 50)\n",
+    "D, I = index.search(np.ascontiguousarray(user_embs), 50)\n",
     "s = []\n",
     "hit = 0\n",
     "for i, uid in tqdm(enumerate(test_user_model_input['user_id'])):\n",
