--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -386,7 +386,7 @@
     "    tf.compat.v1.disable_eager_execution()\n",
     "\n",
     "model = YoutubeDNN(user_feature_columns, item_feature_columns, num_sampled=100, user_dnn_hidden_units=(128,64, embedding_dim))\n",
-    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=False,p=1,k_max=2,num_sampled=100,user_dnn_hidden_units=(128,64, embedding_dim),init_std=0.001)\n",
+    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=False,p=1,k_max=2,num_sampled=100,user_dnn_hidden_units=(128,64, embedding_dim))\n",
     "\n",
     "model.compile(optimizer=\"adam\", loss=sampledsoftmaxloss)  # \"binary_crossentropy\")\n",
     "\n",
