--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -159,7 +159,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from deepctr.inputs import SparseFeat, VarLenSparseFeat\n",
+    "from deepctr.feature_column import SparseFeat, VarLenSparseFeat\n",
     "from preprocess import gen_data_set, gen_model_input\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from tensorflow.python.keras import backend as K\n",
