--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -342,12 +342,18 @@
     "\n",
     "# 1.Label Encoding for sparse features,and process sequence features with `gen_date_set` and `gen_model_input`\n",
     "\n",
-    "features = ['user_id', 'movie_id', 'gender', 'age', 'occupation', 'zip']\n",
+    "features = ['user_id', 'gender', 'age', 'occupation', 'zip']\n",
     "feature_max_idx = {}\n",
     "for feature in features:\n",
     "    lbe = LabelEncoder()\n",
     "    data[feature] = lbe.fit_transform(data[feature]) + 1\n",
     "    feature_max_idx[feature] = data[feature].max() + 1\n",
+    "\n",
+    "id_count = data['movie_id'].value_counts()  \n",
+    "mapdict = {t[0]: i for i, t in\n",
+    "           enumerate(sorted([(k, v) for k, v in id_count.to_dict().items()], key=lambda x: x[1], reverse=True))}\n",
+    "data['movie_id'] = data['movie_id'].map(mapdict)\n",
+    "feature_max_idx['movie_id'] = data['movie_id'].max() + 1\n",
     "\n",
     "user_profile = data[[\"user_id\", \"gender\", \"age\", \"occupation\", \"zip\"]].drop_duplicates('user_id')\n",
     "\n",
