--- a/examples/colab_MovieLen1M_YoutubeDNN.ipynb
+++ b/examples/colab_MovieLen1M_YoutubeDNN.ipynb
@@ -114,7 +114,7 @@
     "from tensorflow.python.keras.models import Model\n",
     "\n",
     "from deepmatch.models import *\n",
-    "from deepmatch.utils import sampledsoftmaxloss\n"
+    "from deepmatch.utils import sampledsoftmaxloss, Sampler\n"
    ]
   },
   {
@@ -312,6 +312,11 @@
     "\n",
     "item_feature_columns = [SparseFeat('movie_id', feature_max_idx['movie_id'], embedding_dim)]\n",
     "\n",
+    "from collections import Counter\n",
+    "train_counter = Counter(train_model_input['movie_id'])\n",
+    "item_count = [train_counter.get(i,0) for i in range(item_feature_columns[0].vocabulary_size)]\n",
+    "sampler_config = Sampler('fixed_unigram',num_sampled=100,item_name=\"movie_id\",item_count=item_count)\n",
+    "\n",
     "# 3.Define Model and train\n",
     "\n",
     "import tensorflow as tf\n",
@@ -320,8 +325,8 @@
     "else:\n",
     "    K.set_learning_phase(True)\n",
     "    \n",
-    "model = YoutubeDNN(user_feature_columns, item_feature_columns, num_sampled=100, user_dnn_hidden_units=(128,64, embedding_dim))\n",
-    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=True,k_max=2,num_sampled=100,user_dnn_hidden_units=(128,64, embedding_dim))\n",
+    "model = YoutubeDNN(user_feature_columns, item_feature_columns, user_dnn_hidden_units=(128,64, embedding_dim), sampler_config=sampler_config)\n",
+    "# model = MIND(user_feature_columns,item_feature_columns,dynamic_k=True,k_max=2, user_dnn_hidden_units=(128,64, embedding_dim), sampler_config=sampler_config)\n",
     "\n",
     "model.compile(optimizer=\"adam\", loss=sampledsoftmaxloss)  # \"binary_crossentropy\")\n",
     "\n",
