--- a/examples/colab_MovieLen1M_DSSM_InBatchSoftmax.ipynb
+++ b/examples/colab_MovieLen1M_DSSM_InBatchSoftmax.ipynb
@@ -326,7 +326,7 @@
     "from collections import Counter\n",
     "train_counter = Counter(train_model_input['movie_id'])\n",
     "item_count = [train_counter.get(i,0) for i in range(item_feature_columns[0].vocabulary_size)]\n",
-    "sampler_config = NegativeSampler('batch',num_sampled=255,item_name=\"movie_id\",item_count=item_count)\n",
+    "sampler_config = NegativeSampler('inbatch',num_sampled=255,item_name=\"movie_id\",item_count=item_count)\n",
     "\n",
     "# 3.Define Model and train\n",
     "\n",
