--- a/examples/colab_MovieLen1M_DSSM_InBatchSoftmax.ipynb
+++ b/examples/colab_MovieLen1M_DSSM_InBatchSoftmax.ipynb
@@ -22,15 +22,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 13146,
+     "status": "ok",
+     "timestamp": 1656786953325,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "yTl6d6jO1oqf",
-    "outputId": "ee7303f1-8970-4726-a9f1-368798077228"
+    "outputId": "16a19888-344e-4dbe-c723-effe370222f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-07-02 18:35:40--  http://files.grouplens.org/datasets/movielens/ml-1m.zip\n",
+      "Resolving files.grouplens.org (files.grouplens.org)... 128.101.65.152\n",
+      "Connecting to files.grouplens.org (files.grouplens.org)|128.101.65.152|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 5917549 (5.6M) [application/zip]\n",
+      "Saving to: ‘./ml-1m.zip’\n",
+      "\n",
+      "./ml-1m.zip         100%[===================>]   5.64M  3.43MB/s    in 1.6s    \n",
+      "\n",
+      "2022-07-02 18:35:42 (3.43 MB/s) - ‘./ml-1m.zip’ saved [5917549/5917549]\n",
+      "\n",
+      "--2022-07-02 18:35:42--  https://raw.githubusercontent.com/shenweichen/DeepMatch/master/examples/preprocess.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 5642 (5.5K) [text/plain]\n",
+      "Saving to: ‘preprocess.py’\n",
+      "\n",
+      "preprocess.py       100%[===================>]   5.51K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2022-07-02 18:35:42 (75.7 MB/s) - ‘preprocess.py’ saved [5642/5642]\n",
+      "\n",
+      "Archive:  ml-1m.zip\n",
+      "  inflating: ml-1m/movies.dat        \n",
+      "  inflating: ml-1m/ratings.dat       \n",
+      "  inflating: ml-1m/README            \n",
+      "  inflating: ml-1m/users.dat         \n",
+      "\u001b[33mWARNING: Skipping tensorflow as it is not installed.\u001b[0m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "deepctr 0.9.1 requires h5py==2.10.0, but you have h5py 3.1.0 which is incompatible.\u001b[0m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "tensorflow-gpu 2.5.0 requires h5py~=3.1.0, but you have h5py 2.10.0 which is incompatible.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! wget http://files.grouplens.org/datasets/movielens/ml-1m.zip -O ./ml-1m.zip \n",
     "! wget https://raw.githubusercontent.com/shenweichen/DeepMatch/master/examples/preprocess.py -O preprocess.py\n",
@@ -51,8 +100,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
+    "executionInfo": {
+     "elapsed": 3234,
+     "status": "ok",
+     "timestamp": 1656786956552,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "C_ZR6gzp1E2N"
    },
    "outputs": [],
@@ -79,13 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 5508,
+     "status": "ok",
+     "timestamp": 1656786962055,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "lcO29zFb21Od",
-    "outputId": "bfeed1ac-99f2-425f-dda6-10b83be721fe"
+    "outputId": "9c60dffa-5829-40bc-c54d-cde4ae2bea72"
    },
    "outputs": [
     {
@@ -126,20 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 400136,
+     "status": "ok",
+     "timestamp": 1656787362187,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "BMOvk_de2ML3",
-    "outputId": "962afe1c-d387-4345-861f-e9b974a0b495"
+    "outputId": "2c5ac944-b866-4a63-be70-fedc9c257812"
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6040/6040 [00:12<00:00, 488.35it/s]\n"
+      "100%|██████████| 6040/6040 [00:12<00:00, 482.49it/s]\n"
      ]
     },
     {
@@ -149,45 +228,45 @@
       "8 8\n",
       "Train on 988129 samples\n",
       "Epoch 1/20\n",
-      "988129/988129 [==============================] - 38s 39us/sample - loss: 5.6344\n",
+      "988129/988129 [==============================] - 44s 44us/sample - loss: 4.7422\n",
       "Epoch 2/20\n",
-      "988129/988129 [==============================] - 41s 41us/sample - loss: 4.6947\n",
+      "988129/988129 [==============================] - 47s 47us/sample - loss: 4.3175\n",
       "Epoch 3/20\n",
-      "988129/988129 [==============================] - 39s 39us/sample - loss: 4.4681\n",
+      "988129/988129 [==============================] - 52s 53us/sample - loss: 4.1604\n",
       "Epoch 4/20\n",
-      "988129/988129 [==============================] - 38s 38us/sample - loss: 4.3227\n",
+      "988129/988129 [==============================] - 56s 56us/sample - loss: 4.0652\n",
       "Epoch 5/20\n",
-      "988129/988129 [==============================] - 38s 38us/sample - loss: 4.2224\n",
+      "988129/988129 [==============================] - 53s 54us/sample - loss: 3.9986\n",
       "Epoch 6/20\n",
-      "988129/988129 [==============================] - 37s 37us/sample - loss: 4.1463\n",
+      "988129/988129 [==============================] - 51s 52us/sample - loss: 3.9487\n",
       "Epoch 7/20\n",
-      "988129/988129 [==============================] - 37s 37us/sample - loss: 4.0843\n",
+      "988129/988129 [==============================] - 45s 45us/sample - loss: 3.9083\n",
       "Epoch 8/20\n",
-      "988129/988129 [==============================] - 37s 38us/sample - loss: 4.0339\n",
+      "988129/988129 [==============================] - 44s 45us/sample - loss: 3.8760\n",
       "Epoch 9/20\n",
-      "988129/988129 [==============================] - 44s 44us/sample - loss: 3.9941\n",
+      "988129/988129 [==============================] - 51s 51us/sample - loss: 3.8502\n",
       "Epoch 10/20\n",
-      "988129/988129 [==============================] - 38s 38us/sample - loss: 3.9619\n",
+      "988129/988129 [==============================] - 51s 52us/sample - loss: 3.8282\n",
       "Epoch 11/20\n",
-      "988129/988129 [==============================] - 43s 43us/sample - loss: 3.9349\n",
+      "988129/988129 [==============================] - 54s 55us/sample - loss: 3.8102\n",
       "Epoch 12/20\n",
-      "988129/988129 [==============================] - 39s 39us/sample - loss: 3.9112\n",
+      "988129/988129 [==============================] - 51s 51us/sample - loss: 3.7938\n",
       "Epoch 13/20\n",
-      "988129/988129 [==============================] - 39s 39us/sample - loss: 3.8902\n",
+      "988129/988129 [==============================] - 41s 41us/sample - loss: 3.7804\n",
       "Epoch 14/20\n",
-      "988129/988129 [==============================] - 39s 39us/sample - loss: 3.8712\n",
+      "988129/988129 [==============================] - 48s 48us/sample - loss: 3.7676\n",
       "Epoch 15/20\n",
-      "988129/988129 [==============================] - 38s 38us/sample - loss: 3.8560\n",
+      "988129/988129 [==============================] - 65s 65us/sample - loss: 3.7577\n",
       "Epoch 16/20\n",
-      "988129/988129 [==============================] - 39s 40us/sample - loss: 3.8413\n",
+      "988129/988129 [==============================] - 53s 53us/sample - loss: 3.7482\n",
       "Epoch 17/20\n",
-      "988129/988129 [==============================] - 39s 39us/sample - loss: 3.8285\n",
+      "988129/988129 [==============================] - 50s 50us/sample - loss: 3.7394\n",
       "Epoch 18/20\n",
-      "988129/988129 [==============================] - 38s 38us/sample - loss: 3.8185\n",
+      "988129/988129 [==============================] - 56s 57us/sample - loss: 3.7311\n",
       "Epoch 19/20\n",
-      "988129/988129 [==============================] - 40s 40us/sample - loss: 3.8069\n",
+      "988129/988129 [==============================] - 52s 53us/sample - loss: 3.7238\n",
       "Epoch 20/20\n",
-      "988129/988129 [==============================] - 40s 41us/sample - loss: 3.7964\n",
+      "988129/988129 [==============================] - 56s 57us/sample - loss: 3.7180\n",
       "WARNING:tensorflow:From /Users/swc/anaconda3/lib/python3.6/site-packages/tensorflow/python/keras/engine/training_v1.py:2070: Model.state_updates (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "This property should not be used in TensorFlow 2.0, as updates are applied automatically.\n",
@@ -205,6 +284,7 @@
     "\n",
     "# 1.Label Encoding for sparse features,and process sequence features with `gen_date_set` and `gen_model_input`\n",
     "\n",
+    "#features = ['user_id','movie_id','gender', 'age', 'occupation', 'zip']\n",
     "feature_max_idx = {}\n",
     "for feature in sparse_features:\n",
     "    lbe = LabelEncoder()\n",
@@ -213,7 +293,7 @@
     "\n",
     "user_profile = data[[\"user_id\", \"gender\", \"age\", \"occupation\", \"zip\"]].drop_duplicates('user_id')\n",
     "\n",
-    "item_profile = data[[\"movie_id\"]].drop_duplicates('movie_id')\n",
+    "item_profile = data[[\"movie_id\",\"genres\"]].drop_duplicates('movie_id')\n",
     "\n",
     "user_profile.set_index(\"user_id\", inplace=True)\n",
     "\n",
@@ -236,15 +316,17 @@
     "                        VarLenSparseFeat(SparseFeat('hist_movie_id', feature_max_idx['movie_id'], embedding_dim,\n",
     "                                                    embedding_name=\"movie_id\"), SEQ_LEN, 'mean', 'hist_len'),\n",
     "                        VarLenSparseFeat(SparseFeat('hist_genres', feature_max_idx['genres'], embedding_dim,\n",
-    "                                                   embedding_name=\"genres\"), SEQ_LEN, 'mean', 'hist_len'),\n",
+    "                                embedding_name=\"genres\"), SEQ_LEN, 'mean', 'hist_len'),\n",
     "                        ]\n",
     "\n",
-    "item_feature_columns = [SparseFeat('movie_id', feature_max_idx['movie_id'], embedding_dim)]\n",
+    "item_feature_columns = [SparseFeat('movie_id', feature_max_idx['movie_id'], embedding_dim),\n",
+    "                        SparseFeat('genres', feature_max_idx['genres'], embedding_dim)\n",
+    "                       ]\n",
     "\n",
     "from collections import Counter\n",
     "train_counter = Counter(train_model_input['movie_id'])\n",
     "item_count = [train_counter.get(i,0) for i in range(item_feature_columns[0].vocabulary_size)]\n",
-    "sampler_config = NegativeSampler('frequency',num_sampled=255,item_name=\"movie_id\",item_count=item_count)\n",
+    "sampler_config = NegativeSampler('inbatch',num_sampled=255,item_name=\"movie_id\",item_count=item_count)\n",
     "\n",
     "# 3.Define Model and train\n",
     "\n",
@@ -254,17 +336,17 @@
     "else:\n",
     "    K.set_learning_phase(True)\n",
     "    \n",
-    "model = YoutubeDNN(user_feature_columns, item_feature_columns, user_dnn_hidden_units=(128,64, embedding_dim), sampler_config=sampler_config)\n",
-    "#model = MIND(user_feature_columns,item_feature_columns,dynamic_k=False,k_max=2, user_dnn_hidden_units=(128,64, embedding_dim), sampler_config=sampler_config)\n",
+    "model = DSSM(user_feature_columns, item_feature_columns,user_dnn_hidden_units=(128,64, embedding_dim),\n",
+    "             item_dnn_hidden_units=(64, embedding_dim,),loss_type='softmax',sampler_config=sampler_config)\n",
     "\n",
     "model.compile(optimizer=\"adam\", loss=sampledsoftmaxloss)\n",
     "\n",
     "history = model.fit(train_model_input, train_label,  # train_label,\n",
-    "                    batch_size=512, epochs=20, verbose=1, validation_split=0.0, )\n",
+    "                    batch_size=256, epochs=20, verbose=1, validation_split=0.0, )\n",
     "\n",
     "# 4. Generate user features for testing and full item features for retrieval\n",
     "test_user_model_input = test_model_input\n",
-    "all_item_model_input = {\"movie_id\": item_profile['movie_id'].values,}\n",
+    "all_item_model_input = {\"movie_id\": item_profile['movie_id'].values,\"genres\": item_profile['genres'].values}\n",
     "\n",
     "user_embedding_model = Model(inputs=model.user_input, outputs=model.user_embedding)\n",
     "item_embedding_model = Model(inputs=model.item_input, outputs=model.item_embedding)\n",
@@ -295,13 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 2988,
+     "status": "ok",
+     "timestamp": 1656787365168,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "j2ZNYNBOOqrN",
-    "outputId": "2eec5e82-2d2b-4fe0-9b83-2a74a4dc52ba"
+    "outputId": "7c66659a-582f-4747-e025-5f6c6253c15f"
    },
    "outputs": [
     {
@@ -319,20 +411,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "executionInfo": {
+     "elapsed": 3764,
+     "status": "ok",
+     "timestamp": 1656787368915,
+     "user": {
+      "displayName": "沈伟臣",
+      "userId": "00399522274399293678"
+     },
+     "user_tz": -480
+    },
     "id": "6TY1l27iJU8U",
-    "outputId": "5a8ccdd3-af70-4c48-b859-84c4befddfdd"
+    "outputId": "6e842add-350e-41d8-8e8b-fd4652e74e17"
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6040it [00:02, 2769.01it/s]"
+      "6040it [00:02, 2487.51it/s]"
      ]
     },
     {
@@ -340,8 +442,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "recall 0.33708609271523177\n",
-      "hit rate 0.33708609271523177\n"
+      "recall 0.3554635761589404\n",
+      "hit rate 0.3554635761589404\n"
      ]
     },
     {
@@ -388,7 +490,8 @@
   "colab": {
    "collapsed_sections": [],
    "name": "colab_MovieLen1M_YoutubeDNN.ipynb",
-   "provenance": []
+   "provenance": [],
+   "toc_visible": true
   },
   "gpuClass": "standard",
   "kernelspec": {
