--- a/examples/colab_MovieLen1M_MIND.ipynb
+++ b/examples/colab_MovieLen1M_MIND.ipynb
@@ -544,7 +544,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -558,7 +558,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1d70199b62199da485033397e2b96130a1715d8a0eb336025d359dd46d0fa11b"
+   }
   }
  },
  "nbformat": 4,
